# Job_board_project

./: .env.template  .flake8  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
src/jobboard_app/: job_board_db_diagramm.xml  manage.py
src/jobboard_app/core/: forms.py  services.py  urls.py  views.py
src/jobboard_app/core/business_logic/: errors.py
src/jobboard_app/core/business_logic/dto/: __init__.py  address.py  company.py  respond.py  review.py  user.py  vacancy.py
src/jobboard_app/core/business_logic/services/: __init__.py  common.py  company.py  level.py  quantity_range.py  vacancy.py
src/jobboard_app/core/dto/: company.py  respond.py  user.py
src/jobboard_app/core/migrations/: 0001_initial.py  0002_populate_level_table.py  0003_populate_employees_quantity_ranges_table.py  0004_alter_address_house_number_alter_address_street.py  0005_alter_company_instagram_alter_company_linkedin_and_more.py
src/jobboard_app/core/models/: __init__.py  address.py  company.py  country.py  employee.py  employees_quantity_range.py  gender.py  job_app_format.py  language.py  language_level.py  level.py  like.py  position.py  profile.py  respond.py  respond_status.py  review.py  sector.py  status.py  tag.py  user.py  user_language_level.py  vacancy.py  work_format.py
src/jobboard_app/core/presentation_layer/: converters.py  urls.py  validators.py
src/jobboard_app/core/presentation_layer/forms/: __init__.py  add_company_form.py  add_review_form.py  add_vacancy_form.py  apply_vacancy_form.py  filter_vacancy_form.py
src/jobboard_app/core/presentation_layer/templates/: add_company.html  add_review.html  add_vacancy.html  base.html  companies.html  company.html  home.html  vacancy.html
src/jobboard_app/core/presentation_layer/views/: __init__.py  company.py  index.py  review.py  user.py  vacancy.py
src/jobboard_app/core/templates/core/: add.html  add_company.html  add_review.html  add_vacancy.html  apply.html  base.html  companies.html  company.html  home.html  profile.html  vacancy.html
src/jobboard_app/jobboard_app/: asgi.py  logger_formatter.py  settings.py  urls.py  wsgi.py
